--- a/style.css
+++ b/style.css
@@ -505,6 +505,7 @@
         -moz-border-radius: 15px;
         -ms-border-radius: 15px;
         -o-border-radius: 15px;
+        cursor: pointer;
     }
     
     .card2:hover {
@@ -520,168 +521,6 @@
         -o-transform: scale(1.15);
     }
     
-    .card3 {
-        width: 300px;
-        height: 430px;
-        border-radius: 15px;
-        /* background-color: #2c2a2a; */
-        background: linear-gradient(to right, rgb(213, 133, 255) 0%, rgb(0, 255, 238) 100%);
-        border-radius: 20;
-        transition: all .2s;
-        -webkit-border-radius: 15px;
-        -moz-border-radius: 15px;
-        -ms-border-radius: 15px;
-        -o-border-radius: 15px;
-    }
-    
-    .card3:hover {
-        transform: scale(1.15);
-        border-radius: 30px;
-        -webkit-border-radius: 30px;
-        -moz-border-radius: 30px;
-        -ms-border-radius: 30px;
-        -o-border-radius: 30px;
-        -webkit-transform: scale();
-        -moz-transform: scale();
-        -ms-transform: scale();
-        -o-transform: scale();
-    }
-    
-    .card4 {
-        width: 300px;
-        height: 430px;
-        border-radius: 15px;
-        /* background-color: #2c2a2a; */
-        background: linear-gradient(to right, rgb(180, 121, 219) 0%, rgb(216, 63, 129) 100%);
-        border-radius: 20;
-        transition: all .2s;
-        -webkit-border-radius: 15px;
-        -moz-border-radius: 15px;
-        -ms-border-radius: 15px;
-        -o-border-radius: 15px;
-    }
-    
-    .card4:hover {
-        transform: scale(1.15);
-        border-radius: 30px;
-        -webkit-border-radius: 30px;
-        -moz-border-radius: 30px;
-        -ms-border-radius: 30px;
-        -o-border-radius: 30px;
-        -webkit-transform: scale();
-        -moz-transform: scale();
-        -ms-transform: scale();
-        -o-transform: scale();
-    }
-    
-    .card5 {
-        width: 300px;
-        height: 430px;
-        border-radius: 15px;
-        /* background-color: #2c2a2a; */
-        background: linear-gradient(to right, rgb(0, 146, 69) 0%, rgb(252, 238, 33) 100%);
-        border-radius: 20;
-        transition: all .2s;
-        -webkit-border-radius: 15px;
-        -moz-border-radius: 15px;
-        -ms-border-radius: 15px;
-        -o-border-radius: 15px;
-    }
-    
-    .card5:hover {
-        transform: scale(1.15);
-        border-radius: 30px;
-        -webkit-border-radius: 30px;
-        -moz-border-radius: 30px;
-        -ms-border-radius: 30px;
-        -o-border-radius: 30px;
-        -webkit-transform: scale();
-        -moz-transform: scale();
-        -ms-transform: scale();
-        -o-transform: scale();
-    }
-    
-    .card6 {
-        width: 300px;
-        height: 430px;
-        border-radius: 15px;
-        /* background-color: #2c2a2a; */
-        background: linear-gradient(to right, rgb(241, 190, 19) 0%, rgb(216, 104, 59) 100%);
-        border-radius: 20;
-        transition: all .2s;
-        -webkit-border-radius: 15px;
-        -moz-border-radius: 15px;
-        -ms-border-radius: 15px;
-        -o-border-radius: 15px;
-    }
-    
-    .card6:hover {
-        transform: scale(1.15);
-        border-radius: 30px;
-        -webkit-border-radius: 30px;
-        -moz-border-radius: 30px;
-        -ms-border-radius: 30px;
-        -o-border-radius: 30px;
-        -webkit-transform: scale();
-        -moz-transform: scale();
-        -ms-transform: scale();
-        -o-transform: scale();
-    }
-    
-    .card60 {
-        width: 300px;
-        height: 430px;
-        border-radius: 15px;
-        /* background-color: #2c2a2a; */
-        background: linear-gradient(to right, rgb(121, 248, 48) 0%, rgb(119, 230, 238) 100%);
-        border-radius: 20;
-        transition: all .2s;
-        -webkit-border-radius: 15px;
-        -moz-border-radius: 15px;
-        -ms-border-radius: 15px;
-        -o-border-radius: 15px;
-    }
-    
-    .card60:hover {
-        transform: scale(1.15);
-        border-radius: 30px;
-        -webkit-border-radius: 30px;
-        -moz-border-radius: 30px;
-        -ms-border-radius: 30px;
-        -o-border-radius: 30px;
-        -webkit-transform: scale();
-        -moz-transform: scale();
-        -ms-transform: scale();
-        -o-transform: scale();
-    }
-    
-    .card7 {
-        width: 300px;
-        height: 430px;
-        border-radius: 15px;
-        /* background-color: #2c2a2a; */
-        background: linear-gradient(to right, rgb(231, 70, 132) 0%, rgb(223, 151, 182) 100%);
-        border-radius: 20;
-        transition: all .2s;
-        -webkit-border-radius: 15px;
-        -moz-border-radius: 15px;
-        -ms-border-radius: 15px;
-        -o-border-radius: 15px;
-    }
-    
-    .card7:hover {
-        transform: scale(1.15);
-        border-radius: 30px;
-        -webkit-border-radius: 30px;
-        -moz-border-radius: 30px;
-        -ms-border-radius: 30px;
-        -o-border-radius: 30px;
-        -webkit-transform: scale();
-        -moz-transform: scale();
-        -ms-transform: scale();
-        -o-transform: scale();
-    }
-    
     .card8 {
         width: 300px;
         height: 430px;
@@ -694,6 +533,7 @@
         -moz-border-radius: 15px;
         -ms-border-radius: 15px;
         -o-border-radius: 15px;
+        cursor: pointer;
     }
     
     .card8:hover {
@@ -721,6 +561,7 @@
         -moz-border-radius: 15px;
         -ms-border-radius: 15px;
         -o-border-radius: 15px;
+        cursor: pointer;
     }
     
     .card9:hover {
@@ -886,280 +727,6 @@
         margin-top: -220px;
     }
     /* photographs section */
-    /*achievement section */
-    
-    #Achievements {
-        margin-top: 70px;
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-    
-    .achievement1 {
-        padding-left: 44px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: #000000;
-        margin-bottom: 50px;
-    }
-    
-    .card-image {
-        position: relative;
-        margin-left: 67px;
-        height: 300px;
-        width: 300px;
-        border-radius: 40px;
-        padding: 10px;
-        margin-top: 10px;
-        -webkit-border-radius: 40px;
-        -moz-border-radius: 40px;
-        -ms-border-radius: 40px;
-        -o-border-radius: 40px;
-    }
-    
-    .card-image .card-img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-        border: 4px solid #022c3f;
-        border-radius: 50%;
-        -webkit-border-radius: 50%;
-        -moz-border-radius: 50%;
-        -ms-border-radius: 50%;
-        -o-border-radius: 50%;
-    }
-    
-    .cards {
-        width: 450px;
-        height: 620px;
-        border-radius: 40px;
-        -webkit-border-radius: 40px;
-        -moz-border-radius: 40px;
-        -ms-border-radius: 40px;
-        -o-border-radius: 40px;
-        background: linear-gradient(to right, rgb(31, 161, 201) 0%, rgb(169, 199, 199) 100%);
-        font-family: 'Josefin Sans', sans-serif;
-        margin-top: 40px;
-        margin-right: 40px;
-        transition: all .4s;
-        -webkit-transition: all .4s;
-        -moz-transition: all .4s;
-        -ms-transition: all .4s;
-        -o-transition: all .4s;
-    }
-    
-    .card-content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 10px 14px;
-        margin-left: 20px;
-        margin-right: 15px;
-    }
-    
-    .name {
-        font-size: 30px;
-        font-weight: 700;
-        margin-left: -10px;
-        margin-bottom: 10px;
-        color: #000000;
-    }
-    
-    .description {
-        font-size: 20px;
-        font-weight: 400;
-        margin-top: 10px;
-        color: #000000;
-        line-height: 29px;
-        margin-bottom: 20px;
-    }
-    
-    .descriptions {
-        font-size: 23px;
-        font-weight: 400;
-        margin-top: 10px;
-        color: #000000;
-        line-height: 35px;
-        margin-left: 10px;
-        margin-bottom: 20px;
-    }
-    
-    .cards:hover {
-        background: linear-gradient(to right, rgb(147, 150, 142) 0%, rgb(105, 105, 105) 100%);
-        transform: scale(1.05);
-        -webkit-transform: scale(1.05);
-        -moz-transform: scale(1.05);
-        -ms-transform: scale(1.05);
-        -o-transform: scale(1.05);
-    }
-    
-    .cards1 {
-        width: 450px;
-        height: 620px;
-        border-radius: 40px;
-        -webkit-border-radius: 40px;
-        -moz-border-radius: 40px;
-        -ms-border-radius: 40px;
-        -o-border-radius: 40px;
-        background: linear-gradient(to right, rgb(209, 17, 10) 0%, rgb(202, 127, 131) 100%);
-        font-family: poppins;
-        margin-top: 40px;
-        margin-right: 40px;
-        transition: all .4s;
-        -webkit-transition: all .4s;
-        -moz-transition: all .4s;
-        -ms-transition: all .4s;
-        -o-transition: all .4s;
-    }
-    
-    .cards1:hover {
-        background: linear-gradient(to right, rgb(147, 150, 142) 0%, rgb(105, 105, 105) 100%);
-        transform: scale(1.05);
-        -webkit-transform: scale(1.05);
-        -moz-transform: scale(1.05);
-        -ms-transform: scale(1.05);
-        -o-transform: scale(1.05);
-    }
-    
-    .cards3 {
-        width: 450px;
-        height: 620px;
-        border-radius: 40px;
-        -webkit-border-radius: 40px;
-        -moz-border-radius: 40px;
-        -ms-border-radius: 40px;
-        -o-border-radius: 40px;
-        background: linear-gradient(to right, rgb(8, 165, 48) 0%, rgb(164, 231, 101) 100%);
-        font-family: poppins;
-        margin-top: 40px;
-        margin-right: 40px;
-        transition: all .4s;
-        -webkit-transition: all .4s;
-        -moz-transition: all .4s;
-        -ms-transition: all .4s;
-        -o-transition: all .4s;
-    }
-    
-    .cards3:hover {
-        background: linear-gradient(to right, rgb(147, 150, 142) 0%, rgb(105, 105, 105) 100%);
-        transform: scale(1.05);
-        -webkit-transform: scale(1.05);
-        -moz-transform: scale(1.05);
-        -ms-transform: scale(1.05);
-        -o-transform: scale(1.05);
-    }
-    
-    .card11 {
-        width: 450px;
-        height: 610px;
-        border-radius: 40px;
-        -webkit-border-radius: 40px;
-        -moz-border-radius: 40px;
-        -ms-border-radius: 40px;
-        -o-border-radius: 40px;
-        background: linear-gradient(to right, rgb(74, 228, 195) 0%, rgb(228, 140, 39) 100%);
-        font-family: poppins;
-        margin-top: 10px;
-        margin-right: 40px;
-        transition: all .4s;
-        -webkit-transition: all .4s;
-        -moz-transition: all .4s;
-        -ms-transition: all .4s;
-        -o-transition: all .4s;
-    }
-    
-    .card12 {
-        width: 450px;
-        height: 610px;
-        border-radius: 40px;
-        -webkit-border-radius: 40px;
-        -moz-border-radius: 40px;
-        -ms-border-radius: 40px;
-        -o-border-radius: 40px;
-        background: linear-gradient(to right, rgb(223, 43, 199) 0%, rgb(46, 138, 224) 100%);
-        font-family: poppins;
-        margin-top: 10px;
-        margin-right: 40px;
-        transition: all .4s;
-        -webkit-transition: all .4s;
-        -moz-transition: all .4s;
-        -ms-transition: all .4s;
-        -o-transition: all .4s;
-    }
-    
-    .card13 {
-        width: 450px;
-        height: 610px;
-        border-radius: 40px;
-        -webkit-border-radius: 40px;
-        -moz-border-radius: 40px;
-        -ms-border-radius: 40px;
-        -o-border-radius: 40px;
-        background: linear-gradient(to right, rgb(214, 218, 27) 0%, rgb(228, 75, 126) 100%);
-        font-family: poppins;
-        margin-top: 10px;
-        margin-right: 40px;
-        transition: all .4s;
-        -webkit-transition: all .4s;
-        -moz-transition: all .4s;
-        -ms-transition: all .4s;
-        -o-transition: all .4s;
-    }
-    
-    .card11:hover {
-        background: linear-gradient(to right, rgb(147, 150, 142) 0%, rgb(105, 105, 105) 100%);
-        transform: scale(1.05);
-        -webkit-transform: scale(1.05);
-        -moz-transform: scale(1.05);
-        -ms-transform: scale(1.05);
-        -o-transform: scale(1.05);
-    }
-    
-    .card13:hover {
-        background: linear-gradient(to right, rgb(147, 150, 142) 0%, rgb(105, 105, 105) 100%);
-        transform: scale(1.05);
-        -webkit-transform: scale(1.05);
-        -moz-transform: scale(1.05);
-        -ms-transform: scale(1.05);
-        -o-transform: scale(1.05);
-    }
-    
-    .card12:hover {
-        background: linear-gradient(to right, rgb(147, 150, 142) 0%, rgb(105, 105, 105) 100%);
-        transform: scale(1.05);
-        -webkit-transform: scale(1.05);
-        -moz-transform: scale(1.05);
-        -ms-transform: scale(1.05);
-        -o-transform: scale(1.05);
-    }
-    
-    .name11 {
-        font-size: 30px;
-        font-weight: 700;
-        margin-left: -10px;
-        margin-bottom: 10px;
-        color: #000000;
-    }
-    
-    .descriptions11 {
-        font-size: 15px;
-        font-weight: 400;
-        margin-top: 10px;
-        color: #000000;
-        line-height: 29px;
-        margin-bottom: 20px;
-    }
-    
-    .sub-projects {
-        margin-top: 100px;
-        font-size: 60px;
-        font-weight: 600;
-        color: #ddd2d2;
-        text-align: center;
-        align-items: center;
-        justify-content: center;
-    }
     
     .contactme {
         font-family: 'Josefin Sans', sans-serif;
@@ -1245,10 +812,6 @@
         font-weight: 600;
         border: 2px solid transparent;
         border-radius: 14px;
-        -webkit-border-radius: 14px;
-        -moz-border-radius: 14px;
-        -ms-border-radius: 14px;
-        -o-border-radius: 14px;
         width: 250px;
         height: 50px;
     }
@@ -1256,12 +819,7 @@
     .contact-form form .btn:hover {
         background: transparent;
         color: #fff;
-        border: 2px solid #ff004f;
-        transform: scale(1.1);
-        -webkit-transform: scale(1.1);
-        -moz-transform: scale(1.1);
-        -ms-transform: scale(1.1);
-        -o-transform: scale(1.1);
+        border: 1px solid #ff004f;
     }
     /* social */
     
@@ -1424,10 +982,6 @@
         align-items: center;
         justify-content: center;
         gap: 40px;
-        /* display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  grid-gap: 50px;
-  margin-top: 50px; */
     }
     
     .service-lists {
@@ -1529,8 +1083,6 @@
         flex: 1;
         min-height: 150px;
         width: 100%;
-        /* background-color: blueviolet;
-  background-image: linear-gradient(to top left, blueviolet, rgb(73, 31, 112)); */
         margin-bottom: 4px;
     }
     
@@ -1605,7 +1157,7 @@
     
     @media only screen and (max-width: 600px) {
         #header {
-            background-image: url(pp.jpg);
+            background-image: url(prof/php.png);
         }
         .setdiv {
             background: rgba(42, 43, 42, 0.3);
@@ -1752,25 +1304,7 @@
         .card2:hover {
             pointer-events: none;
         }
-        .card3:hover {
-            pointer-events: none;
-        }
-        .card4:hover {
-            pointer-events: none;
-        }
-        .card5:hover {
-            pointer-events: none;
-        }
-        .card6:hover {
-            pointer-events: none;
-        }
-        .card7:hover {
-            pointer-events: none;
-        }
         .card8:hover {
-            pointer-events: none;
-        }
-        .card60:hover {
             pointer-events: none;
         }
         #photographs {
@@ -1779,12 +1313,6 @@
         .pos_Set {
             margin-top: -150px;
             margin-right: 20px;
-        }
-        .sub-project {
-            text-align: center;
-            margin-right: 40px;
-            margin-top: 40px;
-            font-size: 35px;
         }
         .slider {
             position: relative;
@@ -1834,71 +1362,6 @@
             margin-left: 0px;
             padding: 10px 70px;
             margin-top: -90px;
-        }
-        #Achievements {
-            margin-top: -70px;
-        }
-        .sub-projects {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding-bottom: 10px;
-            font-size: 40px;
-            color: #c8ccce;
-            padding-left: 0px;
-        }
-        .achievement1 {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(339px, 1fr));
-            grid-gap: 10px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: #000000;
-            margin-bottom: 40px;
-            padding-left: 43px;
-        }
-        .card-image {
-            position: relative;
-            margin-left: 0px;
-            height: 150px;
-            width: 150px;
-            padding: 10px;
-            margin-top: 10px;
-        }
-        .card-image .card-img {
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-            border: 4px solid #022c3f;
-            border-radius: 50%;
-            -webkit-border-radius: 50%;
-            -moz-border-radius: 50%;
-            -ms-border-radius: 50%;
-            -o-border-radius: 50%;
-        }
-        .cards {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 300px;
-            height: 440px;
-            border-radius: 40px;
-            -webkit-border-radius: 40px;
-            -moz-border-radius: 40px;
-            -ms-border-radius: 40px;
-            -o-border-radius: 40px;
-            background: linear-gradient(to right, rgb(31, 161, 201) 0%, rgb(169, 199, 199) 100%);
-            font-family: 'Josefin Sans', sans-serif;
-            margin-top: 10px;
-            margin-right: 0px;
-        }
-        .card-content {
-            display: flex;
-            flex-direction: column;
-            align-items: left;
-            padding: 10px 14px;
-            margin-right: 15px;
         }
         .name {
             font-size: 17px;
@@ -2253,7 +1716,7 @@
     
     @media (min-width: 601px) and (max-width: 1024px) {
         #header {
-            background-image: url(images/dp.jpg);
+            background-image: url(prof/php.png);
         }
         .header-text {
             margin-top: 25%;
